gitops/apps/catalog-jvm/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "63500"
  name: catalog-jvm
spec:
  to:
    kind: Service
    name: catalog-jvm
  port:
    targetPort: http
